--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>br.com.sulamerica</groupId>
-  <artifactId>gto</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <artifactId>analise-gto</artifactId>
+  <version>1.0.0</version>
   <packaging>kjar</packaging>
   <name>analise-gto</name>
   <description>Projeto de analise automatizada de guia de tratamento odontologico</description>
